# smartsync-crawler

./: .gitignore  README.md  pyproject.toml  run.py
app/: __init__.py
app/utils/: json_to_csv.py
crawler/crawler/: items.py
crawler/crawler/spiders/: items.json  smartsync_spider.py
