[project]
name = "smartsync-crawler"
version = "0.1.0"
description = ""
authors = [
    {name = "Vinskao",email = "tianyikao@gmail.com"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "flask (>=3.1.0,<4.0.0)",
    "scrapy (>=2.12.0,<3.0.0)",
    "pillow (>=11.1.0,<12.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
